syntax = "proto3";

package org.example.grpc;

option java_multiple_files = true;
option java_package = "org.example.grpc";
option java_outer_classname = "HelloWorldProto";

service MyService {
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
  rpc GetHeader (HeaderRequest) returns (HeaderReply) {
  }
  rpc GetPost (PostRequest) returns (PostReply) {
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message PostRequest {
  int32 limit = 1;
}

message PostReply {
  repeated Post posts = 1;
}

message Post {
  int32 id = 1;
  string title = 2;
  string body = 3;
  string author = 4;
}

message HeaderRequest {
  string param = 1;
}

message HeaderReply {
  string title = 1;
}